--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
  <!-- Navegação do site com menu-hamburguer e dropdown -->
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top py-3 box-shadow color-nav">
       <a href="Index.html" class="navbar-brand ">
-        <img class="ms-md-5" src="/img/caravan.svg" alt="Logo Caravan" />
+        <img class="ms-md-5" src="./img/caravan.svg" alt="Logo Caravan" />
       </a>
 
       <button
