--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 </div>
 </section>
 
-<section id="home-quote" class="p-md-5">
+<section class="p-md-5 home-quote">
   <blockquote class="blockquote text-center text-white p-md-5 p-3"> 
     <p class="display-4"><em>"A felicidade não está na estrada que leva a algum lugar. A felicidade é a própria estrada" </em> </p>
     <footer class="blockquote-footer text-white"> Bob Dylan </footer>
